# agentic-scanner

./: .claudeignore  .coverage  .env  .gitignore  CLAUDE.md  THREAT_MODEL.md  eval_adversarial.py  eval_adversarial_e.py  notes_for_claude.md  pyproject.toml
.claude/agents/: evasion-specialist.md  ops-infrastructure.md  rule-schema-architect.md  tdd-test-engineer.md
Future plans/: future_plans.md  implementation_plan.md
benchmarks/: evaluation.py
meeting notes/: 27.2-Simmons.md
research notes/: 00-index.md  01-problem-statement.md  02-system-design.md  03-layer1-implementation.md  04-threat-taxonomy.md  05-evaluation-results.md  06-related-work.md  07-future-work.md  08-key-contributions.md
rules/: exfiltration.yaml  injection.yaml  privilege_escalation.yaml  supply_chain.yaml
scanner/: cli.py
scanner/aggregator/: __init__.py
scanner/layer1_static/: __init__.py  ast_scanner.py  dependency_auditor.py  fetcher.py  parser.py  rule_engine.py
scanner/layer2_semantic/: __init__.py  consistency_checker.py  llm_judge.py  prompt_injection_detector.py
scanner/layer3_dynamic/: __init__.py  agent_simulator.py  docker_executor.py  tool_call_executor.py  trace_analyzer.py
scanner/models/: __init__.py  risk_report.py  skill_manifest.py
tests/fixtures/adversarial/: E001-base64-pipeline.md  E002-hex-encoding.md  E003-url-encoding.md  E004-double-encoding.md  E005-context-hijacking.md  E006-constraint-negation.md  E007-role-play.md  E008-homoglyph.md  E009-remote-logic.md  E010-memory-poisoning.md  E011-env-exfiltration.md  E012-credential-harvesting.md  (+11 more)
(+103 files in other folders)
