[tool.poetry]
name = "agentic-scanner"
version = "0.1.0"
description = "Pre-execution security scanner for agentic AI skills, MCP servers, and LangChain tools"
authors = ["Maximilian Hagl <mhagl@drury.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "scanner"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0"
click = "^8.1"
rich = "^13.0"
pyyaml = "^6.0"
anthropic = "^0.25"
docker = "^7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
mypy = "^1.0"
ruff = "^0.4"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
agentic-scanner = "scanner.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "S", "UP"]
ignore = [
    "S101",  # assert in tests is fine
    "S603",  # subprocess calls are what we're analyzing
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=scanner --cov-report=term-missing --cov-fail-under=80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
